// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar renders the toolbar with loading text if no farms are supplied (have not loaded yet) 1`] = `
<div
  id="toolbar"
>
  <ForwardRef(ButtonGroup)
    disableElevation={true}
    fullWidth={true}
    variant="contained"
  >
    <ForwardRef(Button)
      disabled={true}
      key="loading"
    >
      Loading farm data...
    </ForwardRef(Button)>
  </ForwardRef(ButtonGroup)>
</div>
`;

exports[`Toolbar renders the toolbar with toggle buttons for each farm 1`] = `
<div
  id="toolbar"
>
  <ForwardRef(ButtonGroup)
    disableElevation={true}
    fullWidth={true}
    variant="contained"
  >
    <ForwardRef(Button)
      key="all"
      onClick={[MockFunction]}
    >
      All
    </ForwardRef(Button)>
    <ForwardRef(Button)
      key="0"
      onClick={[MockFunction]}
    >
      Friman Metsola
    </ForwardRef(Button)>
    <ForwardRef(Button)
      key="1"
      onClick={[MockFunction]}
    >
      Noora's farm
    </ForwardRef(Button)>
    <ForwardRef(Button)
      key="2"
      onClick={[MockFunction]}
    >
      Organic Ossis's Impact That Lasts
    </ForwardRef(Button)>
    <ForwardRef(Button)
      key="3"
      onClick={[MockFunction]}
    >
      Partial Tech
    </ForwardRef(Button)>
  </ForwardRef(ButtonGroup)>
</div>
`;
